## Process this file with automake to produce Makefile.in
AUTOMAKE_OPTIONS=	foreign
SUBDIRS = QF
EXTRA_DIST = asm_i386.h alsa_funcs_list.h adivtab.h anorm_dots.h anorms.h \
	asm_draw.h block16.h block8.h buildnum.h compat.h context_sdl.h \
	context_x11.h d_iface.h d_ifacea.h d_local.h dga_check.h exp.h fbset.h \
	getopt.h gl_warp_sin.h in_win.h logos.h menu.h net_dgrm.h net_loop.h \
	net_udp.h net_vcr.h net_wins.h netchan.h netmain.h old_keys.h ops.h \
	qstring.h quakeasm.h regex.h r_cvar.h r_dynamic.h r_local.h r_screen.h \
	r_shared.h sbar.h skin_stencil.h snd_render.h varrays.h vgamodes.h \
	view.h vregset.h winquake.h world.h \
	\
	win32/fnmatch.h \
	\
	win32/resources/icon1.ico win32/resources/quakeforge.rc \
	win32/resources/resource.h

