## Process this file with automake to produce Makefile.in
AUTOMAKE_OPTIONS=	foreign
SUBDIRS = QF
EXTRA_DIST = \
	adivtab.h alsa_funcs_list.h anorm_dots.h anorms.h asm_draw.h asm_i386.h \
	block16.h block8.h buildnum.h clview.h compat.h context_sdl.h \
	context_x11.h d_iface.h d_ifacea.h d_local.h dga_check.h exp.h fbset.h \
	garbage.h getopt.h gib_buffer.h gib_builtin.h gib_classes.h \
	gib_execute.h gib_function.h gib_handle.h gib_object.h gib_parse.h \
	gib_process.h gib_regex.h gib_semantics.h gib_thread.h gib_tree.h \
	gib_vars.h gl_warp_sin.h in_win.h logos.h mod_internal.h net_dgrm.h \
	net_loop.h net_udp.h net_vcr.h net_wins.h netchan.h netmain.h \
	noisetextures.h old_keys.h ops.h pstdint.h qstring.h quakeasm.h \
	r_cvar.h r_dynamic.h r_internal.h r_local.h r_screen.h r_shared.h \
	regex.h rua_internal.h sbar.h skin_stencil.h snd_internal.h \
	sv_console.h varrays.h vgamodes.h vid_internal.h vregset.h winquake.h \
	world.h \
	\
	qw/bothdefs.h qw/msg_backbuf.h qw/msg_ucmd.h qw/pmove.h qw/protocol.h \
	\
	win32/dirent.h win32/fnmatch.h win32/stdint.h \
	\
	win32/resources/icon1Vista.ico win32/resources/icon1XP.ico \
	win32/resources/quakeforge.rc win32/resources/resource.h
