AUTOMAKE_OPTIONS= foreign

# everything depends on util
# ruamoko depends on gamecode
# gib depends on ruamoko
# audio depends on gamecode
# models depends on image
# video depends on models(?), image(?) and ruamoko
# console depends on video, ruamoko and audio
SUBDIRS=@libs_dirs@
DIST_SUBDIRS=util gamecode ruamoko gib audio image models video console \
			 net qw client
