## Process this file with automake to produce Makefile.in
AUTOMAKE_OPTIONS = foreign

SUBDIRS = include source doc RPM

EXTRA_DIST = tools/gas2masm/Makefile tools/gas2masm/gas2masm.c \
	tools/gas2masm/gas2masm.dsp tools/gas2masm/gas2masm.dsw \
	tools/gas2masm/gas2masm.mak tools/gas2masm/gas2masm.mdp \
	bootstrap
