## Process this file with automake to produce Makefile.in
AUTOMAKE_OPTIONS=	foreign
EXTRA_DIST = \
	Makefile.am QuakeForge.sln bsp2img/bsp2img.vcproj \
	builtins/builtins.vcproj clean.ps1 common/common.vcproj \
	console/console.vcproj console_client/console_client.vcproj \
	console_server/console_server.vcproj engine/engine.vcproj gib/gib.vcproj \
	hw-master/hw-master.vcproj image/image.vcproj include/config.h \
	models-sw/models-sw.vcproj models/models.vcproj modelsgl/modelsgl.vcproj \
	net-main/net-main.vcproj net/net.vcproj nq-common/nq-common.vcproj \
	nq-sdl/nq-sdl.vcproj nq-sdl32/nq-sdl32.vcproj nq-server/nq-server.vcproj \
	nq-sgl/nq-sgl.vcproj nq-wgl/nq-wgl.vcproj nq/nq.vcproj pak/pak.vcproj \
	qfbsp/qfbsp.vcproj qfcc/FlexBison.rules qfcc/qfcc.vcproj \
	qfclient/qfclient.vcproj qflight/qflight.vcproj \
	qfmodelgen/qfmodelgen.vcproj qfprogs/qfprogs.vcproj \
	qfserver/qfserver.vcproj qfvis/qfvis.vcproj qfwavinfo/qfwavinfo.vcproj \
	qtv/qtv.vcproj qw-client-sdl/qw-client-sdl.vcproj \
	qw-client-sdl32/qw-client-sdl32.vcproj qw-client-sgl/qw-client-sgl.vcproj \
	qw-client-wgl/qw-client-wgl.vcproj qw-master/qw-master.vcproj \
	qw/qw.vcproj readme.txt ruamoko/ruamoko.vcproj sound/sound.vcproj \
	util/util.vcproj video-sdl/video-sdl.vcproj video-sgl/video-sgl.vcproj \
	video-sw/video-sw.vcproj video-sw32/video-sw32.vcproj \
	video-wgl/video-wgl.vcproj video/video.vcproj videogl/videogl.vcproj \
	wad/wad.vcproj
