AUTOMAKE_OPTIONS = foreign
SUBDIRS = GL plugin
includedir = $(prefix)/include/QF
include_HEADERS = bspfile.h cbuf.h cdaudio.h checksum.h clip_hull.h cmd.h \
	console.h crc.h csqc.h cvar.h dstring.h draw.h gib_buffer.h \
	gib_builtin.h gib_function.h gib_init.h gib_parse.h gib_process.h \
	gib_regex.h gib_thread.h gib_vars.h hash.h hl.h idparse.h in_event.h \
	info.h input.h joystick.h keys.h link.h locs.h mathlib.h mdfour.h \
	model.h modelgen.h msg.h pak.h pakfile.h pcx.h plugin.h pr_comp.h \
	pr_debug.h pr_obj.h progs.h qargs.h qdefs.h qendian.h qfplist.h \
	qtypes.h quakefs.h quakeio.h render.h screen.h sizebuf.h skin.h \
	sound.h spritegn.h sys.h teamplay.h texture.h tga.h uint32.h va.h \
	ver_check.h vid.h wad.h zone.h
