AUTOMAKE_OPTIONS = foreign
SUBDIRS = GL plugin classes
includedir = $(prefix)/include/QF
include_HEADERS = bspfile.h cbuf.h cdaudio.h checksum.h clip_hull.h cmd.h \
	console.h crc.h csqc.h cvar.h dstring.h draw.h gib.h hash.h hl.h \
	idparse.h image.h in_event.h info.h input.h joystick.h keys.h link.h \
	llist.h locs.h mathlib.h mdfour.h model.h modelgen.h msg.h object.h pak.h \
	pakfile.h pcx.h png.h plugin.h pr_comp.h pr_debug.h pr_obj.h progs.h \
	qargs.h qdefs.h qendian.h qfplist.h qtypes.h quakefs.h quakeio.h render.h \
	riff.h screen.h sizebuf.h skin.h sound.h spritegn.h sys.h teamplay.h \
	tga.h uint32.h va.h ver_check.h vid.h view.h wad.h wadfile.h zone.h
