AUTOMAKE_OPTIONS = foreign
pkgincludedir = $(includedir)/QF
nobase_pkginclude_HEADERS = \
	alloc.h bspfile.h cbuf.h cdaudio.h checksum.h clip_hull.h cmd.h \
	console.h crc.h csqc.h cvar.h darray.h dstring.h draw.h gib.h hash.h hl.h \
	idparse.h image.h in_event.h info.h input.h iqm.h joystick.h keys.h \
	link.h llist.h locs.h mathlib.h mdfour.h mersenne.h model.h modelgen.h \
	msg.h object.h pak.h pakfile.h pcx.h png.h plugin.h pr_comp.h pr_debug.h \
	pr_obj.h pr_type.h progs.h qargs.h qdefs.h qendian.h qfplist.h qtypes.h \
	quakefs.h \
	quakeio.h render.h riff.h ruamoko.h screen.h script.h segtext.h set.h \
	sizebuf.h skin.h sound.h spritegn.h sys.h teamplay.h tga.h uint32.h va.h \
	ver_check.h vid.h vrect.h view.h wad.h wadfile.h winding.h zone.h \
	\
	GL/ati.h GL/defines.h GL/extensions.h GL/funcs.h GL/qf_draw.h \
	GL/qf_explosions.h GL/qf_funcs_list.h GL/qf_iqm.h GL/qf_lightmap.h \
	GL/qf_rlight.h GL/qf_rmain.h GL/qf_rsurf.h GL/qf_sky.h GL/qf_textures.h \
	GL/qf_vid.h GL/types.h \
	\
	GLSL/defines.h GLSL/funcs.h GLSL/qf_alias.h GLSL/qf_bsp.h GLSL/qf_draw.h \
	GLSL/qf_funcs_list.h GLSL/qf_iqm.h GLSL/qf_lightmap.h GLSL/qf_particles.h \
	GLSL/qf_textures.h GLSL/qf_vid.h GLSL/types.h \
	\
	math/dual.h math/half.h math/matrix3.h math/matrix4.h math/quaternion.h \
	math/vector.h \
	\
	plugin/cd.h plugin/console.h plugin/general.h plugin/input.h \
	plugin/snd_output.h plugin/snd_render.h plugin/vid_render.h
